--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,17 @@ html {
   position: absolute;
 }
 
+.cards-left {
+  position: absolute;
+  top: 20%;
+  left: 1%;
+  width: 100px;
+  height: 50px;
+  border: 1px solid black;
+  padding-top: 13px;
+  text-align: center;
+}
+
 .board-desk {
   position: absolute;
   left: 20%;
