--- a/styles/main.css
+++ b/styles/main.css
@@ -55,4 +55,12 @@ html {
       -ms-flex-align: center;
           align-items: center;
 }
+
+.incorrect {
+  border: 3px solid red;
+  width: 60px;
+  height: 60px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
 /*# sourceMappingURL=main.css.map */
